--- a/client/index.html
+++ b/client/index.html
@@ -14,13 +14,26 @@
 	</head>
 	<body class="container">
     <script type=module>
-      import { add, h, state, derive, style } from 'https://tdom.dev/vanjs-starter.js'
+      import { add, h, state, derive, style, classes } from 'https://tdom.dev/vanjs-starter.js'
+      import { relativeDate } from 'https://tdom.dev/format-date.js'
 
       const $items = state([])
 
       const $filters = state({
         status: "unread"
       })
+
+      const $feeds = state({})
+
+      function refetchFeeds() {
+        fetch("/api/feeds?", {
+            headers: { 'content-type': 'application/json' },
+          })
+          .then(res => res.json())
+          .then(res => $feeds.val = res)
+          .catch(err => console.error(err))
+      }
+      await refetchFeeds()
 
       function refetchItems() {
         fetch("/api/items?"+(new URLSearchParams($filters.val)).toString(), {
@@ -30,7 +43,7 @@
           .then(items => $items.val = items)
           .catch(err => console.error(err))
       }
-      refetchItems()
+      await refetchItems()
 
       style(`
         .item {
@@ -38,9 +51,13 @@
           gap: 0.5rem;
           align-items: flex-start;
           padding-block: 0.1rem;
+          &.item--expanded {
+            background: rgba(0,0,0,0.1);
+          }
           .item__a {
             color: inherit;
             text-decoration: none;
+            cursor: pointer;
             &:visited {
               color: #666;
             }
@@ -54,21 +71,28 @@
             width: 1.5em;
             aspect-ratio: 1/1;
           }
+          .item__actions {
+            display: flex;
+            gap: 0.5rem;
+          }
           &[data-status=read] {
+            opacity: 0.4;
             .item__icon {
               filter: grayscale(100%);
             }
             .item__a {
+              pointer-events: none;
               filter: grayscale(100%);
               text-decoration: line-through;
-              color: #ccc;
             }
           }
         }
       `)
+
+      let $expanded = state(null)
       const ItemLink = (item) => {
         let $title = state(item.title)
-        let $expand = state(false)
+        let $expand = derive(() => $expanded.val === item.id)
         let timeout
         const onStart = (e) => {
           e.preventDefault()
@@ -77,14 +101,15 @@
             timeout = null
             // long
             console.log("LONG")
-            $expand.val = true
+            $expanded.val = item.id
           }, 500)
         }
         const onEnd = e => {
           clearTimeout(timeout)
+          $expanded.val = item.id
           if (timeout) {
             // short
-            window.open(item.link, '_blank').focus();
+            // window.open(item.link, '_blank').focus();
           }
         }
         return h.div(
@@ -100,7 +125,7 @@
             () => $title.val,
           ),
           () => $expand.val ? h.div({ class: "item__actions" },
-            item.links.map(link => h.a({href: link.url, target: "_blank"}, link.title)),
+            [{title: (new URL(item.link)).hostname.replace(/^www\./, ''), url: item.link}, ...item.links].map(link => h.a({href: link.url, target: "_blank"}, link.title)),
           ) : ""
         )
       }
@@ -110,6 +135,9 @@
         }
         const ontoggle = async () => {
           const status = item.status === "unread" ? "read" : "unread"
+          if ($expanded.val === item.id) {
+            $expanded.val = null
+          }
           await fetch(`/api/items/${encodeURIComponent(item.id)}`, {
             method: "PATCH",
             headers: { 'content-type': 'application/json' },
@@ -121,7 +149,7 @@
           })
           // refetchItems()
         }
-        return h.li({ class: "item", "data-status": item.status },
+        return h.li({ class: () => classes("item", $expanded.val === item.id && "item--expanded"), "data-status": item.status },
           h.img({
             class: "item__icon",
             src: item.icon,
@@ -139,6 +167,12 @@
       style(`
         .title {
           text-align: center;
+          margin-bottom: 0;
+        }
+        .last-fetch {
+          text-align: center;
+          margin-bottom: 1rem;
+          font-size: 0.8rem;
         }
         .item-list {
           padding: 0;
@@ -149,6 +183,7 @@
       const App = () => {
         return h.div(
           h.h2({ class: "title" }, "Feed"),
+          h.div({ class: "last-fetch" }, () => `updated ${relativeDate($feeds.val?.lastFetch ?? '')}`),
           () => $items.val.length === 0 ? h.p("You're all caught up! We'll refresh the feed for you at 8pm every day. Enjoy your day ;)") : "",
           () => h.ul({ class: "item-list" },
             $items.val.map(it => Item(it))
